fix: make menu visible on desktop again

--- a/app/assets/styles/modules/_header-navigation.scss
+++ b/app/assets/styles/modules/_header-navigation.scss
@@ -27,6 +27,7 @@
 		padding-top: 25px;
 		margin-top: 0;
 		z-index: 10;
+		visibility: visible;
 	}
 
 	@include  min-1200 {
